--- a/public/css/templatemo-scholar.css
+++ b/public/css/templatemo-scholar.css
@@ -101,7 +101,7 @@ ul {
 p {
   font-size: 14px;
   line-height: 28px;
-  color: #4a4a4a;
+  color: #b3b3b3;
 }
 
 img {
@@ -120,12 +120,12 @@ body {
 }
 
 ::selection {
-  background: #7a6ad8;
+  background: #e5212a;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #7a6ad8;
+  background: #e5212a;
   color: #fff;
 }
 
@@ -147,12 +147,12 @@ body {
 }
 
 .section-heading h2 em {
-  color: #7a6ad8;
+  color: #e5212a;
   font-style: normal;
 }
 
 .section-heading h6 {
-  color: #7a6ad8;
+  color: #e5212a;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 600;
@@ -161,7 +161,7 @@ body {
 .main-button a {
   display: inline-block;
   background-color: #fff;
-  color: #7a6ad8;
+  color: #e5212a;
   font-size: 14px;
   font-weight: 500;
   height: 40px;
@@ -172,7 +172,7 @@ body {
 }
 
 .main-button a:hover {
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   color: #fff;
 }
 
@@ -249,7 +249,7 @@ Pre-loader Style
   height: 16px;
   top: 12px;
   left: 15px;
-  background: #7a6ad8;
+  background: #e5212a;
   border-radius: 50%;
   -webkit-transform: translateX(0);
   transform: translateX(0);
@@ -272,7 +272,7 @@ Pre-loader Style
   width: 16px;
   height: 16px;
   margin-left: 16px;
-  background: #7a6ad8;
+  background: #e5212a;
   border-radius: 50%;
 }
 
@@ -285,7 +285,7 @@ Header Style
 */
 
 .background-header {
-  background-color: #7a6ad8 !important;
+  background-color: #e5212a !important;
   border-radius: 0px 0px 25px 25px;
   height: 80px!important;
   position: fixed!important;
@@ -314,7 +314,7 @@ Header Style
 
 .header-area .main-nav {
   background: transparent;
-  display: flex
+  display: flex;
 }
 
 .header-area .main-nav .logo {
@@ -350,19 +350,19 @@ Header Style
   width: 250px;
   border-radius: 23px;
   border: none;
-  color: #fff;
+  color: #000;
   font-size: 14px;
   font-weight: 300;
   padding: 0px 20px 0px;
 }
 
 .header-area .main-nav #search input::placeholder {
-  color: rgba(250, 250, 250, 0.75);
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .header-area .main-nav #search i {
   position: absolute;
-  color: #fff;
+  color: #000;
   right: 20px;
   top: 15px;
   font-size: 16px;
@@ -402,7 +402,7 @@ Header Style
   height: 40px;
   line-height: 40px;
   text-transform: capitalize;
-  color: #fff;
+  color: #000;
   -webkit-transition: all 0.4s ease 0s;
   -moz-transition: all 0.4s ease 0s;
   -o-transition: all 0.4s ease 0s;
@@ -562,7 +562,7 @@ Header Style
 @media (max-width: 767px) {
   .background-header .main-nav .nav,
   .header-area .main-nav .nav {
-    background-color: #f1f0fe;
+    background-color: #fffcdb;
   }
   .background-header .main-nav .nav li a,
   .header-area .main-nav .nav li a {
@@ -570,13 +570,13 @@ Header Style
     height: 50px;
     font-weight: 400;
     color: #1e1e1e;
-    background-color: #f1f0fe;
+    background-color: #fffcdb;
      border-radius: 0px 0px 25px 25px;
   }
   .background-header .main-nav .nav li,
   .header-area .main-nav .nav li {
     border-top: 1px solid #ddd;
-    background-color: #f1f0fe;
+    background-color: #fffcdb;
     height: 50px;
     border-radius: 0px 0px 25px 25px;
   }
@@ -606,7 +606,7 @@ Header Style
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #7a6ad8!important;
+    color: #e5212a!important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
@@ -623,8 +623,8 @@ Header Style
     padding: 0px;
   }
   .header-area .logo {
-    margin-left: 0px;
-    margin-top: 30px;
+    margin-left: 10px;
+    margin-top: 10px;
   }
   .header-area .menu-trigger {
     display: block !important;
@@ -667,7 +667,7 @@ Banner Style
 */
 
 .main-banner {
-  background-image: url(../images/banner-bg.jpg);
+  background: linear-gradient(135deg, #e5212a 0%, #fffcdb 50%, #fafafa 100%);
   background-position: right bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -696,7 +696,7 @@ Banner Style
 }
 
 .main-banner .item span.category {
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   color: #fff;
   font-size: 14px;
   text-transform: uppercase;
@@ -731,7 +731,7 @@ Banner Style
 
 .main-banner .item .buttons .main-button a {
   font-size: 14px;
-  color: #7a6ad8;
+  color: #e5212a;
   background-color: #fff;
   display: inline-block;
   height: 50px;
@@ -742,7 +742,7 @@ Banner Style
 }
 
 .main-banner .item .buttons .icon-button i {
-  color: #7a6ad8;
+  color: #e5212a;
   background-color: #fff;
   display: inline-block;
   height: 50px;
@@ -815,7 +815,7 @@ Services Style
   display: inline-block;
   text-align: center;
   line-height: 190px;
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   border-radius: 50%;
   position: absolute;
   right: 0;
@@ -830,7 +830,7 @@ Services Style
 .services .service-item .main-content {
   border-radius: 25px;
   padding: 80px 30px 50px 30px;
-  background-color: #f1f0fe;
+  background-color: #fffcdb;
   margin-bottom: 30px;
   margin-right: 80px;
   transition: all .4s;
@@ -845,7 +845,7 @@ Services Style
 }
 
 .services .service-item p {
-  color: #4a4a4a;
+  color: #b3b3b3;
   margin-bottom: 25px;
 }
 
@@ -869,7 +869,7 @@ About Style
   z-index: -1;
   width: 84%;
   height: 100%;
-  background-color: #f1f0fe;
+  background-color: #fffcdb;
   content: '';
   border-top-left-radius: 500px;
   border-bottom-left-radius: 500px;
@@ -878,7 +878,7 @@ About Style
 .accordion {
   margin-top: -40px;
   margin-bottom: -40px;
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   border-radius: 40px;
   padding: 80px 50px 50px 50px;
 }
@@ -897,7 +897,7 @@ About Style
 }
 
 .accordion-button:not(.collapsed) {
-  color: #7a6ad8;
+  color: #e5212a;
   background-color: #fff;
 }
 
@@ -919,7 +919,7 @@ h2.accordion-header button {
   text-align: center;
   line-height: 30px;
   border-radius: 50%;
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   color: #fff;
 }
 
@@ -933,7 +933,7 @@ h2.accordion-header button {
   padding: 0px 25px 30px 25px;
   font-size: 14px;
   line-height: 28px;
-  color: #4a4a4a;
+  color: #b3b3b3;
 }
 
 .about-us .section-heading {
@@ -961,7 +961,7 @@ Courses Style
 }
 
 .event_filter {
-  background-color: #f1f0fe;
+  background-color: #fffcdb;
   border-radius: 50px;
   padding: 15px 40px;
   list-style: none;
@@ -985,7 +985,23 @@ Courses Style
 
 .event_filter li a.is_active,
 .event_filter li a:hover {
-  color: #7a6ad8;
+  color: #e5212a;
+}
+
+/* Filter animation styles */
+.event_outer {
+  transition: all 0.3s ease-in-out;
+  opacity: 1;
+  transform: scale(1);
+}
+
+.event_outer.isotope-hidden {
+  opacity: 0;
+  transform: scale(0.8);
+}
+
+.event_outer.isotope-item {
+  transition: all 0.3s ease-in-out;
 }
 
 .events_item .thumb {
@@ -1004,7 +1020,7 @@ Courses Style
   top: 30px;
   font-size: 14px;
   text-transform: uppercase;
-  color: #7a6ad8;
+  color: #e5212a;
   background-color: rgba(250, 250, 250, 0.95);
   padding: 8px 20px;
   border-radius: 25px;
@@ -1016,7 +1032,7 @@ Courses Style
   position: absolute;
   right: -30px;
   top: -50px;
-  background-color: rgba(122, 106, 216, 0.95);
+  background-color: rgba(229, 33, 42, 0.95);
   width: 130px;
   height: 130px;
   border-radius: 50%;
@@ -1041,7 +1057,7 @@ Courses Style
 }
 
 .events_item {
-  background-color: #f1f0fe;
+  background-color: #fffcdb;
   border-radius: 25px;
   margin-bottom: 30px;
   position: relative;
@@ -1054,7 +1070,7 @@ Courses Style
 }
 
 .events_item .down-content span.author {
-  color: #7a6ad8;
+  color: #e5212a;
   font-size: 15px;
   display: inline-block;
   margin-bottom: 6px;
@@ -1067,7 +1083,7 @@ Courses Style
 }
 
 .events_item:hover .down-content h4 {
-  color: #7a6ad8;
+  color: #e5212a;
 }
 
 .events_item:hover .thumb span.price {
@@ -1095,7 +1111,7 @@ Facts Style
   z-index: -1;
   width: 95%;
   height: 100%;
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   content: '';
   border-top-right-radius: 500px;
   border-bottom-right-radius: 500px;
@@ -1169,12 +1185,12 @@ Team Style
 .team-member .main-content {
   border-radius: 25px;
   padding: 140px 30px 40px 30px;
-  background-color: #f1f0fe;
+  background-color: #fffcdb;
   text-align: center;
 }
 
 .team-member .main-content span.category {
-  color: #7a6ad8;
+  color: #e5212a;
   font-size: 15px;
 }
 
@@ -1192,7 +1208,7 @@ Team Style
 
 .team-member .main-content ul li a {
   background-color: #fff;
-  color: #7a6ad8;
+  color: #e5212a;
   display: inline-block;
   text-align: center;
   line-height: 40px;
@@ -1204,7 +1220,7 @@ Team Style
 }
 
 .team-member .main-content ul li a:hover {
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   color: #fff;
 }
 
@@ -1229,7 +1245,7 @@ Testimonials Style
   z-index: -1;
   width: 65%;
   height: 100%;
-  background-color: #f1f0fe;
+  background-color: #fffcdb;
   content: '';
   border-top-left-radius: 500px;
   border-bottom-left-radius: 500px;
@@ -1246,7 +1262,7 @@ Testimonials Style
 }
 
 .testimonials .item {
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   border-radius: 25px;
   padding: 80px;
 }
@@ -1296,7 +1312,7 @@ Testimonials Style
   line-height: 50px;
   font-size: 24px;
   display: inline-block;
-  color: #7a6ad8;
+  color: #e5212a;
   background-color: #fff;
   border-radius: 50%;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.10);
@@ -1327,7 +1343,7 @@ Events Style
 }
 
 .events .item {
-  background-color: #f1f0fe;
+  background-color: #fffcdb;
   border-radius: 25px;
   position: relative;
   padding: 40px;
@@ -1363,7 +1379,7 @@ Events Style
 .events .item ul li span.category {
   font-size: 14px;
   text-transform: uppercase;
-  color: #7a6ad8;
+  color: #e5212a;
   background-color: #fff;
   padding: 8px 20px;
   border-radius: 25px;
@@ -1380,13 +1396,13 @@ Events Style
 .events .item ul li span {
   display: inline-block;
   font-size: 14px;
-  color: #4a4a4a;
+  color: #b3b3b3;
   margin-bottom: 10px;
 }
 
 .events .item ul li h6 {
   font-size: 16px;
-  color: #7a6ad8;
+  color: #e5212a;
   font-weight: 600;
 }
 
@@ -1394,7 +1410,7 @@ Events Style
   position: absolute;
   right: 0;
   top: 22px;
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   width: 60px;
   height: 120px;
   display: inline-block;
@@ -1427,7 +1443,7 @@ Contact Style
   z-index: -1;
   width: 65%;
   height: 100%;
-  background-color: #f1f0fe;
+  background-color: #fffcdb;
   content: '';
   border-top-right-radius: 500px;
   border-bottom-right-radius: 500px;
@@ -1456,7 +1472,7 @@ Contact Style
   position: absolute;
   left: 0;
   top: 0;
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   width: 80px;
   padding: 30px 8px;
   line-height: 25px;
@@ -1486,7 +1502,7 @@ Contact Style
 
 .contact-us .special-offer h6 em {
   font-style: normal;
-  color: #7a6ad8;
+  color: #e5212a;
   font-weight: 600;
 }
 
@@ -1497,7 +1513,7 @@ Contact Style
 
 .contact-us .special-offer h4 em {
   font-style: normal;
-  color: #7a6ad8;
+  color: #e5212a;
 }
 
 .contact-us .special-offer a {
@@ -1509,7 +1525,7 @@ Contact Style
   display: inline-block;
   text-align: center;
   line-height: 50px;
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   color: #fff;
   border-radius: 50%;
 }
@@ -1517,7 +1533,7 @@ Contact Style
 .contact-us .contact-us-content {
   border-radius: 25px;
   padding: 80px;
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   position: relative;
   z-index: 1;
 }
@@ -1594,7 +1610,7 @@ Contact Style
   background-color: #fff;
   padding: 0px 25px;
   border-radius: 25px;
-  color: #7a6ad8;
+  color: #e5212a;
   transition: all .4s;
   position: relative;
   z-index: 3;
@@ -1638,7 +1654,7 @@ Footer Style
 footer {
   margin-top: 150px;
   position: relative;
-  background-color: #7a6ad8;
+  background-color: #e5212a;
   vertical-align: middle;
   min-height: 150px;
   border-radius: 150px 150px 0px 0px;
@@ -1683,6 +1699,7 @@ Responsive Style
 
 body {
   overflow-x: hidden;
+  background-color: #fafafa;
 }
 
 @media (max-width: 767px) {
@@ -1787,7 +1804,7 @@ body {
     margin-top: 30px;
   }
   .about-us .main-button a {
-    background-color: #7a6ad8;
+    background-color: #e5212a;
     color: #fff;
   }
   .courses {
@@ -1872,7 +1889,7 @@ body {
     margin-right: 0px;
   }
   .contact-us .special-offer {
-    background-color: #f1f0fe;
+    background-color: #fffcdb;
     margin-bottom: 60px;
     padding: 34px 30px 34px 100px;
     width: 100%;
@@ -1904,5 +1921,145 @@ body {
   }
   .fun-facts:before {
     width: 95%;
+  }
+}
+
+/* Dropdown Styles */
+.header-area .main-nav .nav li.has-sub {
+  position: relative;
+  cursor: pointer;
+}
+
+.header-area .main-nav .nav li.has-sub > a {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+}
+
+.header-area .main-nav .nav li.has-sub > a i {
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.6);
+  transition: transform 0.3s ease, color 0.3s ease;
+  translate: 0 2px;
+}
+
+.header-area .main-nav .nav li.has-sub:hover > a i,
+.header-area .main-nav .nav li.has-sub.is-open-sub > a i {
+  transform: rotate(180deg);
+  color: rgba(255, 255, 255, 1);
+}
+
+.header-area .main-nav .nav li.has-sub .sub-menu {
+  position: absolute;
+  top: 60px;
+  right: 0;
+  background: rgba(255, 255, 255, 0.95);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  min-width: 180px;
+  padding: 8px 0;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-10px);
+  transition: all 0.3s ease;
+  display: grid;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+}
+
+.header-area .main-nav .nav li.has-sub .sub-menu::before {
+  content: "";
+  position: absolute;
+  background: rgba(255, 255, 255, 0.95);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+  top: -7px;
+  right: 22px;
+  width: 12px;
+  height: 12px;
+  rotate: -45deg;
+}
+
+.header-area .main-nav .nav li.has-sub:hover .sub-menu,
+.header-area .main-nav .nav li.has-sub.is-open-sub .sub-menu {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.header-area .main-nav .nav li.has-sub .sub-menu li {
+  padding: 0;
+  height: auto;
+  line-height: normal;
+  border-top: none;
+}
+
+.header-area .main-nav .nav li.has-sub .sub-menu li a {
+  display: block;
+  padding: 12px 20px;
+  color: #1e1e1e;
+  border-radius: 0;
+  transition: all 0.3s ease;
+  font-size: 14px;
+}
+
+.header-area .main-nav .nav li.has-sub .sub-menu li a:hover {
+  background: rgba(0, 0, 0, 0.04);
+  color: #e5212a;
+}
+
+.background-header .main-nav .nav li.has-sub .sub-menu li a {
+  color: #1e1e1e;
+}
+
+.background-header .main-nav .nav li.has-sub .sub-menu {
+  background: rgba(255, 252, 219, 0.95);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+.background-header .main-nav .nav li.has-sub .sub-menu::before {
+  background: rgba(255, 252, 219, 0.95);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-top: 1px solid rgba(255, 255, 255, 0.3);
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+@media (max-width: 767px) {
+  .header-area .main-nav .nav li.has-sub .sub-menu {
+    position: static;
+    box-shadow: none;
+    background-color: transparent;
+    backdrop-filter: none;
+    -webkit-backdrop-filter: none;
+    margin-top: 0;
+    padding-left: 0;
+    opacity: 1;
+    visibility: visible;
+    transform: none;
+  }
+  
+  .header-area .main-nav .nav li.has-sub .sub-menu::before {
+    display: none;
+  }
+  
+  .header-area .main-nav .nav li.has-sub .sub-menu li {
+    background-color: transparent;
+  }
+  
+  .header-area .main-nav .nav li.has-sub > a i {
+    float: right;
+    margin-top: 5px;
+    color: #1e1e1e;
+  }
+  
+  .header-area .main-nav .nav li.has-sub.is-open-sub .sub-menu {
+    display: block;
   }
 }
